# GRRC_Mobile_Manipulator

./: Dockerfile  Dockerfile_Gripper  Dockerfile_Map  Dockerfile_Realsense  README.md  calibrate.py  docker-compose.yaml  realsense_point_cloud.py
Vision/: CMakeLists.txt  package.xml  plane_detector.py  run_server.py  tags.yaml
Vision/data/: learning_marker_position_data.xlsx  learning_marker_position_data_augmented.xlsx  learning_vision_position_data.xlsx  learning_vision_position_data_augmented.xlsx  test_marker_position_data.xlsx  test_supplement_data.xlsx  test_vision_position_data.xlsx
Vision/launch/: tag_detection.launch
Vision/msg/: prediction_data.msg
Vision/src/: calibrate.py  detection_apriltag.py  detection_opencv.py  gripper_tip_tf.py  gripping_point_tf.py  hand_eye_tf.py  prediction_model.py  realsense_point_cloud.py  test_data_collect.py  tool0_destination_tf.py
Vision/vision_detection_weight/: marker_predict_4.0.h5  marker_predict_4.1.h5  marker_predict_4.2.h5  marker_predict_4.3.h5  marker_predict_4.4.h5  marker_predict_4.5.h5  marker_predict_4.6.h5  marker_predict_5.0.h5  marker_predict_5.1.h5  marker_predict_5.2.h5  marker_predict_5.3.h5  marker_predict_5.4.h5  marker_predict_5.5.h5
Vision/vision_detection_weight/marker_predict_4.1/: keras_metadata.pb  saved_model.pb
Vision/vision_detection_weight/marker_predict_4.1/variables/: variables.data-00000-of-00001  variables.index
Vision/vision_detection_weight/marker_predict_5.4/: keras_metadata.pb  saved_model.pb
Vision/vision_detection_weight/marker_predict_5.4/variables/: variables.data-00000-of-00001  variables.index
Vision/vision_detection_weight/marker_predict_5.5/: keras_metadata.pb  saved_model.pb
Vision/vision_detection_weight/marker_predict_5.5/variables/: variables.data-00000-of-00001  variables.index
Vision/vision_detection_weight/marker_predict_5.6/: keras_metadata.pb  saved_model.pb
Vision/vision_detection_weight/marker_predict_5.6/variables/: variables.data-00000-of-00001  variables.index
Vision/vision_detection_weight/marker_predict_6.0/: keras_metadata.pb  saved_model.pb
Vision/vision_detection_weight/marker_predict_6.0/variables/: variables.data-00000-of-00001  variables.index
autoware_map/: 0.20_autoware-240325.pcd  autoware-240325.pcd  autoware-241106.pcd  autoware-251117.pcd  autoware-251210.pcd  hdl_graph_slam_custom.launch  new_lanelet2_maps.osm  saved_waypoints.csv  saved_waypoints2.csv  tf.launch
camera_calibration_data/: camera.yaml
can_sending/: CMakeLists.txt
can_sending/src/: sending_CAN.cpp
hand_eye_calib/: CMakeLists.txt  package.xml
hand_eye_calib/launch/: hand_eye_calibration_matrix.launch
minyong/: DockerCompose.yaml  Dockerfile
teleop_twist_keyboard_cpp/src/: teleop_twist_keyboard.cpp
topic_remapping/: CMakeLists.txt  package.xml  saved_waypoints2.csv
topic_remapping/launch/: runtime_manager_custom.launch
topic_remapping/src/: detect_stop.cpp  remapping_topic.cpp
ur_ros_cartesian_control/ur_ros_cartesian_control/: CMakeLists.txt  my_robot_calibration.yaml  package.xml
ur_ros_cartesian_control/ur_ros_cartesian_control/launch/: mobile_manipulator.launch  ur_point_node.launch
ur_ros_cartesian_control/ur_ros_cartesian_control/src/: ur10_ik.cpp  ur_point_node.py
ur_ros_cartesian_control/ur_ros_cartesian_control/srv/: cartesian_point.srv  position.srv
ur_ros_cartesian_control/ur_ros_cartesian_control/urdf/: mobile_manipulator.xacro  ur_common.xacro
